--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
 
             <div class="right-conda-div">
-                <img src="cloud-screenshot.webp" alt="">
+                <img src="cloud-screenshot.jpg" alt="">
             </div>
         </div>
 
