--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div class="lower-discover">
                 <div class="left-lower-discover">
-                    <img src="Distro01.webp" alt="">
+                    <img src="Distro01.jpg" alt="">
                 </div>
 
                 <div class="right-lower-discover">
